# hifsuite_linux_x86_stand_alone

./: README.md  ddt  hif2sc  muffin  setEnv.sh
docker/: download_image.sh
examples/: README.md
examples/arb2/: .gitignore  run_hifsuite.sh  run_standalone.sh
examples/arb2/complete/: CMakeLists.txt  compile_commands.json  generateCSV.sh  gmon.out  tags
examples/arb2/complete/inc/: arb2.hpp
examples/arb2/complete/src/: arb2.cpp  main.cpp
examples/arb2/rtl/: arb2.v
examples/synthetic_case_study_1/: .gitignore
examples/synthetic_case_study_1/complete/: tags
examples/synthetic_case_study_1/complete/.cache/clangd/index/: FaultNode.cpp.01A2794446BC7084.idx  FaultNode.cpp.53683440F5DCE570.idx  FaultNode.hpp.32EF41C133CFD8EA.idx  FaultNode.hpp.8B8541905C7C0CB2.idx  colors.hpp.596F7F54D355CD95.idx  colors.hpp.624A3E09DEB5EFC1.idx  compression.hpp.05F7DE8063A7BE35.idx  compression.hpp.D4B6DB668EF1995E.idx  feq.hpp.2C595B400CA370F2.idx  feq.hpp.C7B4AE6435EDFB75.idx  hif_globals.cpp.1C33F20E32E2589A.idx  hif_globals.cpp.642C33A3A592FEA3.idx  hif_globals.hpp.35F657437FD3810B.idx  hif_globals.hpp.BC67150FCBE32F8B.idx  main.cpp.53E39ADE3135987A.idx  main.cpp.B918422703090293.idx  muffin.hpp.97871DCFE08F2D58.idx  (+23 more)
examples/synthetic_case_study_2/: .gitignore  run_hifsuite.sh
examples/synthetic_case_study_2/complete/: CMakeLists.txt  tags
examples/synthetic_case_study_2/complete/inc/: spec0.hpp  spec1.hpp  spec2.hpp
examples/synthetic_case_study_2/complete/src/: main.cpp  spec0.cpp  spec1.cpp  spec2.cpp
examples/synthetic_case_study_2/rtl/: test.v
(+1 files in other folders)
